ArgoCD/yaml/04-argocd-ingress-nginx-termination-at-ingress-controller-aliyun-LE.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-xaliyun
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
    host: argocd.xaliyun.kingxhj.eu.org
  tls:
  - hosts:
    - argocd.xaliyun.kingxhj.eu.org
    secretName: argocd-xaliyun-le-http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-xaliyun
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
    host: grpc.argocd.xaliyun.kingxhj.eu.org
  tls:
  - hosts:
    - grpc.argocd.xaliyun.kingxhj.eu.org
    secretName: argocd-xaliyun-le-grpc

# kubectl delete secret argocd-xaliyun-le-grpc -n argocd
# kubectl delete secret argocd-xaliyun-le-http -n argocd
